# linux-spectrum

./: .gitignore  README.md  default_settings.json  hello.py  pyproject.toml
src/: cli.py
